objects/Metadata__c.object
<CustomObject>
    <fields>
        <fullName>API_Name__c</fullName>
        <description>API Name, BAP Provisioning, 2018.07.16</description>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Date__c</fullName>
        <label>Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Activate</fullName>
                </value>
                <value>
                    <fullName>Deactivate</fullName>
                </value>
                <value>
                    <fullName>Freeze</fullName>
                </value>
                <value>
                    <fullName>Unfreeze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Changed_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Metadata Item Last Changed by User, BAP Metadata, 2018.07.17</description>
        <label>Changed By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>References_ChangedBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description, Generic Use, 2018.07.16</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <description>Data type of the item in metadata, BAP Metadata, 2018.07.16</description>
        <label>Field Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Filename__c</fullName>
        <description>Filename, Transmit Records, 04.16.19</description>
        <label>Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>Label found on the metadata, BAP Metadata, 2018.07.16</description>
        <label>Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Member_Count__c</fullName>
        <description>Count of Members in Permission Set or group, BAP Management, 2018.08.07</description>
        <label>Member Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_SF_ID__c</fullName>
        <description>Original copied SF ID, BAP Metadata, 2018.07.18</description>
        <label>Original SF ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Type__c</fullName>
        <description>Parent Type of the metadata item, BAP Metadata, 2018.07.16</description>
        <label>Parent Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <description>Parent of the metadata item, BAP Metadata, 2018.07.16</description>
        <label>Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Values__c</fullName>
        <label>Picklist Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referenced_To__c</fullName>
        <label>Referenced To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required state of the item in metadata, BAP Metadata, 2018.07.16</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sandbox_Name__c</fullName>
        <description>Sandbox Name, BAP Metadata, 2018.07.16</description>
        <label>Sandbox Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Generic Status field, currently used but the sandbox refresh log</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Metadata</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>Metadata object for loading data to report on BAP itself</description>
    <label>Metadata</label>
    <nameField>
        <label>Metadata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BAP_Metadata</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Field_Type__c</columns>
        <columns>Picklist_Values__c</columns>
        <columns>Parent__c</columns>
        <columns>Sandbox_Name__c</columns>
        <columns>Parent_Type__c</columns>
        <columns>Label__c</columns>
        <columns>Referenced_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Metadata__c.BAP_Metadata</value>
        </filters>
        <filters>
            <field>Referenced_To__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Sandbox_Name__c</field>
            <operation>equals</operation>
            <value>PROD</value>
        </filters>
        <label>BAP Metadata</label>
    </listViews>
    <listViews>
        <fullName>File_Selector</fullName>
        <columns>NAME</columns>
        <columns>Filename__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Metadata__c.File_Selector</value>
        </filters>
        <label>File Selector</label>
    </listViews>
    <listViews>
        <fullName>Group</fullName>
        <columns>NAME</columns>
        <columns>API_Name__c</columns>
        <columns>Original_SF_ID__c</columns>
        <columns>Member_Count__c</columns>
        <columns>Parent_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Metadata__c.Group</value>
        </filters>
        <label>Group</label>
    </listViews>
    <listViews>
        <fullName>Object_Record_Types</fullName>
        <columns>NAME</columns>
        <columns>Parent__c</columns>
        <columns>Original_SF_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Metadata__c.Object_Record_Types</value>
        </filters>
        <label>Object Record Types</label>
    </listViews>
    <listViews>
        <fullName>Permission_Sets</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Original_SF_ID__c</columns>
        <columns>API_Name__c</columns>
        <columns>Member_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Metadata__c.Permission_Set</value>
        </filters>
        <label>Permission Sets</label>
    </listViews>
    <listViews>
        <fullName>User_Access</fullName>
        <columns>NAME</columns>
        <columns>Parent__c</columns>
        <columns>Picklist_Values__c</columns>
        <columns>Parent_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Metadata__c.User_Access</value>
        </filters>
        <label>User Access</label>
    </listViews>
    <listViews>
        <fullName>User_History</fullName>
        <columns>Original_SF_ID__c</columns>
        <columns>User__c</columns>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <columns>Action__c</columns>
        <columns>Action_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Metadata__c.User_History</value>
        </filters>
        <label>User History</label>
    </listViews>
    <recordTypes>
        <fullName>BAP_Metadata</fullName>
        <active>true</active>
        <description>BAP Metadata from each sandbox</description>
        <label>BAP Metadata</label>
    </recordTypes>
    <recordTypes>
        <fullName>File_Selector</fullName>
        <active>true</active>
        <label>File Selector</label>
    </recordTypes>
    <recordTypes>
        <fullName>Group</fullName>
        <active>true</active>
        <description>List of available Groups</description>
        <label>Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Object_Record_Types</fullName>
        <active>true</active>
        <description>Record Types and their associated Record Types</description>
        <label>Object Record Types</label>
    </recordTypes>
    <recordTypes>
        <fullName>Permission_Set</fullName>
        <active>true</active>
        <description>Contains a list of Permission Sets used in the BAP</description>
        <label>Permission Set</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sandbox_Log</fullName>
        <active>true</active>
        <description>Output from Sandbox scripts</description>
        <label>Sandbox Log</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Access</fullName>
        <active>true</active>
        <description>User access to an object and how the access was granted</description>
        <label>User Access</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_History</fullName>
        <active>true</active>
        <label>User History</label>
    </recordTypes>
</CustomObject>